--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "repository": "https://github.com/MarcioRMed/Node-Victor-Lima.git",
   "author": "MarcioRamosMedeiros",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
+    "-": "^0.0.1",
+    "body-parser": "^1.19.2",
+    "express-handlebars": "^6.0.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0"
   },
-  "dependencies": {
-    "-": "^0.0.1",
-    "express-handlebars": "^6.0.3",
+  "devDependencies": {
     "handlebars": "^4.7.7"
   }
 }
