--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "-": "^0.0.1",
     "body-parser": "^1.19.2",
     "express-handlebars": "^6.0.3",
+    "handlebars": "^4.7.7",
+    "mongoose": "^6.2.8",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0"
-  },
-  "devDependencies": {
-    "handlebars": "^4.7.7"
   }
 }
